--- a/kontakt.html
+++ b/kontakt.html
@@ -62,7 +62,7 @@
     <p id="formResponse"></p>
   </section>
 
-  <section class="join-us">
+  <section class="join-us"><!-- Miejsce rozwojowe, tzn. w przyszlosci mozna dodac opcje do dolaczenia -->
     <h2>Dołącz do naszej kampanii</h2>
     <div class="join-options">
       <div class="join-option">
@@ -86,7 +86,18 @@
   <div class="back-to-home">
     <a href="index.html" class="back-btn">← Powrót do strony głównej</a>
   </div>
-
+ <section class="authors">
+    <h2>Autorzy projektu</h2>
+    <div class="authors-container">
+      <div class="author">
+        <h3>Maja Kubiś</h3>
+      </div>
+      <div class="author">
+        <h3>Aleksandra Muszyńska</h3>
+      </div>
+      </div>
+    </div>
+  </section>
   <footer>
     <div class="footer-content">
       <p>© 2025 Zespół projektu „Victim Blaming Stop” | Zwolnieni z Teorii</p>
