--- a/zasoby.html
+++ b/zasoby.html
@@ -28,7 +28,7 @@
   </section>
 
   <section class="resources">
-    <h2>Materiały do pobrania</h2>
+    <h2>Materiały do pobrania</h2><!--Miejsce rozwojowe, tzn. w przyszlosci mozna dodac materialy-->
     <div class="resources-grid">
       <div class="resource-card">
         <h3>Poradnik "Jak wspierać?"</h3>
@@ -83,15 +83,9 @@
   <div class="back-to-home">
     <a href="index.html" class="back-btn">← Powrót do strony głównej</a>
   </div>
-
   <footer>
     <div class="footer-content">
       <p>© 2025 Zespół projektu „Victim Blaming Stop” | Zwolnieni z Teorii</p>
-      <div class="social-links">
-        <a href="#" aria-label="Facebook">📘</a>
-        <a href="#" aria-label="Instagram">📷</a>
-        <a href="#" aria-label="TikTok">🎵</a>
-      </div>
     </div>
   </footer>
 </body>
