--- a/o-projekcie.html
+++ b/o-projekcie.html
@@ -30,7 +30,7 @@
   <section class="about-content">
     <div class="about-text">
       <h2>Nasza Misja</h2>
-      <p>Jesteśmy dwójką młodych ludzi zaangażowanych w walkę z victim blamingiem - zjawiskiem obwiniania ofiar przemocy za to, co je spotkało.</p>
+      <p>Jesteśmy trójką młodych ludzi zaangażowanych w walkę z victim blamingiem - zjawiskiem obwiniania ofiar przemocy za to, co je spotkało.</p>
       
       <h2>Cele Projektu</h2>
       <ul>
@@ -77,4 +77,5 @@
     </div>
   </footer>
 </body>
+
 </html>
